--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:700" rel="stylesheet">
 <link rel="stylesheet" href="common/css/style.css">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <!-- Social Meta -->
 </head>
 <body>
 
-<div class="loader loader__direction--column"><div class="loader__spin"><img src="common/img/dummy.jpg" data-src="common/img/bg.jpg" width="0" height="0" alt="Background Image for preloading"><img src="common/img/dummy.jpg" data-src="common/img/bg_2.png" width="0" height="0" alt="Background Image for preloading"></div></div>
+<div class="loader loader__direction--column"><div class="loader__spin"><img src="common/img/dummy.jpg" data-src="common/img/bg.jpg" width="0" height="0" alt="Background Image for preloading"><img src="common/img/dummy.jpg" data-src="common/img/bg_2.jpg" width="0" height="0" alt="Background Image for preloading"></div></div>
 
 <header class="l-header">
 	<a href="/" class="logo"><svg class="logo__inner"><use xlink:href="#svg--logo"/></svg></a>
@@ -228,14 +227,14 @@
           <p>Basically, I keep clean code because the code is kind of design. </p>
           <p>Now,I am looking for a job for web design or development.</p>
           <br>
-          <p>On a daily basis, I catch up latest web technology and cool web designs. While I enjoy learing with new framework/library and design.<br>
-          I am enthusiastic about music,especially 90s HipHop, and coffee. These are a part of my life.</p>
+          <p>On a daily basis, I catch up latest web technology and cool web designs. While I enjoy learning new framework/library and design.<br>
+          I am enthusiastic about music, especially 90s HipHop, and coffee. These are a part of my life.</p>
           <p>If you want to know more about me, check the below links.</p>
           
           <ul class="sns sns--about">
             <li class="sns__item--about"><a href="https://twitter.com/nismit_" target="_blank" class="sns__item--link"><svg class="sns__icon--about sns_icon--twitter"><use xlink:href="#svg--twitter"/></svg></a></li>
             <li class="sns__item--about"><a href="https://www.facebook.com/michinobu.nishimoto" target="_blank" class="sns__item--link"><svg class="sns__icon--about sns_icon--facebook"><use xlink:href="#svg--facebook"/></svg></a></li>
-            <li class="sns__item--about"><a href="#" class="sns__item--link"><svg class="sns__icon--about sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
+            <li class="sns__item--about"><a href="https://play.spotify.com/user/nismit" class="sns__item--link"><svg class="sns__icon--about sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
           </ul>
         </div>
       </div><!-- /.flex -->
@@ -261,7 +260,7 @@
 		<li class="sns__item"><a href="https://github.com/Nismit" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--github"><use xlink:href="#svg--github"/></svg></a></li>
 		<li class="sns__item"><a href="https://ca.linkedin.com/in/nismit" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--linkedin"><use xlink:href="#svg--linkedin"/></svg></a></li>
 		<li class="sns__item"><a href="https://www.pinterest.com/nismit_/" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--pinterest"><use xlink:href="#svg--pinterest"/></svg></a></li>
-		<li class="sns__item"><a href="#" class="sns__item--link"><svg class="sns__icon sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
+		<li class="sns__item"><a href="https://play.spotify.com/user/nismit" class="sns__item--link"><svg class="sns__icon sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
 	</ul>
 
 	<p class="u-text-color-white u-text-center u-text-extra-small">Copyright &copy; 2016 Michinobu Nishimoto(NISMIT), All Rights Reserved.</p>
@@ -314,7 +313,7 @@
 </svg>
 <!-- End of SVG -->
 <!-- Load Javascript -->
-<script src="common/js/script.js"></script>
+<script src="common/js/script.min.js"></script>
 <!-- End of Javascript -->
 </body>
 </html>
