--- a/highland.html
+++ b/highland.html
@@ -8,13 +8,15 @@
 <meta name="description" content="">
 <meta name="author" content="Michinobu Nishimoto(Nismit)">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:700" rel="stylesheet">
 <link rel="stylesheet" href="common/css/style.css">
 <!-- Social Meta -->
 </head>
 <body>
-<header class="l-header clearfix">
+
+<div class="loader loader__direction--column"><div class="loader__spin"></div></div>
+
+<header class="l-header">
 	<a href="/" class="logo"><svg class="logo__inner"><use xlink:href="#svg--logo"/></svg></a>
 </header>
 
@@ -36,28 +38,31 @@
 				We decided to use WordPress because it's good for blog. I divided HTML files to template files and implemented WordPress theme.<br>
 				Other, I made a video and edited the video using After Effects.</p>
 
-				<ul>
-					<li>Web Design</li>
-					<li>WordPress</li>
-					<li>jQuery</li>
-					<li>After Effects</li>
-					<li>Shooting</li>
+				<ul class="tags">
+					<li class="tags__item tags__item--other">Web Design</li>
+					<li class="tags__item tags__item--html">HTML5</li>
+					<li class="tags__item tags__item--css3">CSS3</li>
+					<li class="tags__item tags__item--js">jQuery</li>
+					<li class="tags__item tags__item--wp">WordPress</li>
+					<li class="tags__item tags__item--php">PHP</li>
+					<li class="tags__item tags__item--ae">After Effects</li>
+					<li class="tags__item tags__item--other">Shooting</li>
 				</ul>
 		</section>
 
 		<section id="works" class="l-section">
 				<h2>PORTFOLIO</h2>
 
-				<img src="img/ahl/ov1-ahl.jpg" srcset="img/ahl/ov1-ahl.jpg 640w, img/ahl/ov1-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview Toppage">
+				<img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" data-src="img/ahl/ov1-ahl.jpg" data-srcset="img/ahl/ov1-ahl.jpg 640w, img/ahl/ov1-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview Toppage">
 				<p class="u-mb-40">Overview Toppage</p>
 
-				<img src="img/ahl/ov3-ahl.jpg" srcset="img/ahl/ov3-ahl.jpg 640w,img/ahl/ov3-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview">
+				<img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" data-src="img/ahl/ov3-ahl.jpg" data-srcset="img/ahl/ov3-ahl.jpg 640w,img/ahl/ov3-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Overview">
 				<p class="u-mb-40">Overview</p>
 
-				<img src="img/ahl/map-ui.jpg" srcset="img/ahl/map-ui.jpg 640w,img/ahl/map-ui@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Field Map UI">
+				<img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" data-src="img/ahl/map-ui.jpg" data-srcset="img/ahl/map-ui.jpg 640w,img/ahl/map-ui@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Field Map UI">
 				<p class="u-mb-40">Field Map UI</p>
 
-				<img src="img/ahl/ov2-ahl.jpg" srcset="img/ahl/ov2-ahl.jpg 640w,img/ahl/ov2-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Regulation Page">
+				<img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" data-src="img/ahl/ov2-ahl.jpg" data-srcset="img/ahl/ov2-ahl.jpg 640w,img/ahl/ov2-ahl@2x.jpg 1200w" width="100%" class="portfolio__proj" alt="Regulation Page">
 				<p class="u-mb-40">Regulation Page</p>
 
 				<ul class="flex">
@@ -75,7 +80,7 @@
 		<li class="sns__item"><a href="https://github.com/Nismit" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--github"><use xlink:href="#svg--github"/></svg></a></li>
 		<li class="sns__item"><a href="https://ca.linkedin.com/in/nismit" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--linkedin"><use xlink:href="#svg--linkedin"/></svg></a></li>
 		<li class="sns__item"><a href="https://www.pinterest.com/nismit_/" target="_blank" class="sns__item--link"><svg class="sns__icon sns_icon--pinterest"><use xlink:href="#svg--pinterest"/></svg></a></li>
-		<li class="sns__item"><a href="#" class="sns__item--link"><svg class="sns__icon sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
+		<li class="sns__item"><a href="https://play.spotify.com/user/nismit" class="sns__item--link"><svg class="sns__icon sns_icon--spotify"><use xlink:href="#svg--spotify"/></svg></a></li>
 	</ul>
 
 	<p class="u-text-color-white u-text-center u-text-extra-small">Copyright &copy; 2016 Michinobu Nishimoto(NISMIT), All Rights Reserved.</p>
@@ -128,6 +133,7 @@
 </svg>
 <!-- End of SVG -->
 <!-- Load Javascript -->
+<script src="common/js/under.min.js"></script>
 <!-- End of Javascript -->
 </body>
 </html>
