Modify portfolio and skill

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
       <h2 class="slideUp">PORTFOLIO</h2>
 
       <div class="flex flex__a-items flex__wrap">
+				<div class="flex__item flex__gutter u-mb-20 slideSide">
+          <a href="rssfire.html" class="portfolio portfolio--rssfire">
+            <p class="portfolio__inner portfolio--rssfire"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-rssfire.jpg" data-srcset="common/img/thumb-rssfire.jpg 640w, common/img/thumb-rssfire@2x.jpg 1200w" alt="Rssfire">
+            <span><strong>RSSFIRE</strong><br>Mobile App | React Native Development</span></p>
+          </a>
+        </div>
+        <div class="flex__item flex__gutter u-mb-20 slideSide">
+          <a href="nismit.html" class="portfolio portfolio--nismit">
+            <p class="portfolio__inner portfolio--nismit"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-nismit.jpg" data-srcset="common/img/thumb-nismit.jpg 640w, common/img/thumb-nismit@2x.jpg 1200w" alt="NISMIT.ME">
+            <span><strong>PORTFOLIO</strong><br>Website | Design / Development</span></p>
+          </a>
+        </div>
         <div class="flex__item flex__gutter u-mb-20 slideSide">
           <a href="emiacworks.html" class="portfolio portfolio--ew">
             <p class="portfolio__inner portfolio--ew"><img src="common/img/dummy.jpg" srcset="common/img/dummy.jpg" width="100%" class="portfolio__img" data-src="common/img/thumb-emiac.jpg" data-srcset="common/img/thumb-emiac.jpg 640w, common/img/thumb-emiac@2x.jpg 1200w" alt="EMiAC-Works">
@@ -100,9 +112,9 @@
 
         <div class="flex__item--30 flex__gutter--30 slideUp">
           <div class="skill">
-            <p><strong>Javascript/jQuery<span class="skill__text">60%</span></strong></p>
+            <p><strong>Javascript/jQuery<span class="skill__text">80%</span></strong></p>
             <div class="skill__progress">
-              <div class="skill__progress--percent" data-skill-level="60"></div>
+              <div class="skill__progress--percent" data-skill-level="80"></div>
             </div>
           </div>
         </div>
